# abide-lang

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  justfile
compiler/: .gitignore  Cargo.toml
compiler/src/: ast.rs  diagnostic.rs  lex.rs  lib.rs  loader.rs  main.rs  messages.rs  parse.rs  span.rs
compiler/src/elab/: check.rs  collect.rs  env.rs  error.rs  mod.rs  resolve.rs  types.rs
compiler/src/ir/: lower.rs  mod.rs  types.rs
compiler/src/qa/: ast.rs  exec.rs  extract.rs  mod.rs  model.rs  parse.rs  runner.rs
compiler/src/repl/: complete.rs  mod.rs
compiler/src/verify/: context.rs  defenv.rs  encode.rs  harness.rs  ic3.rs  mod.rs  smt.rs
compiler/tests/: integration.rs
compiler/tests/fixtures/: assert_assume.ab  auth.ab  auth.abide  billing.ab  billing.abide  call_site.ab  cardinality.ab  collection_ops.ab  collections.abide  commerce.ab  commerce.abide  composition.abide  constructor_fields.ab  deep_dead_state.ab  fairness.ab  functions.ab  functions.abide  hospital.ab  hospital.abide  hypo_base.ab  imperative.abide  inventory.ab  inventory.abide  lambdas.ab  lemmas.ab  liveness_quantified_false.ab  liveness_reduction.ab  logistics.ab  logistics.abide  match_exhaustive.ab  match_non_exhaustive.ab  match_non_exhaustive_alias.ab  match_non_exhaustive_scene.ab  match_test.ab  match_test.abide  nested_actions.ab  nondet_defaults.ab  nondet_defaults_invalid.ab  nondet_where_false.ab  one_lone.ab  (+23 more)
crates/abide/: Cargo.toml
crates/abide-ir/: Cargo.toml
crates/abide-ir/src/: lib.rs
crates/abide-ir/src/ir/: mod.rs  relation.rs  types.rs
crates/abide-ir/src/ir/lower/: expr.rs  mod.rs  qualify.rs  relation_expr.rs  system.rs  tests.rs
crates/abide-lsp/: Cargo.toml
crates/abide-lsp/src/: main.rs
crates/abide-qa/: Cargo.toml
crates/abide-qa/src/: lib.rs
crates/abide-qa/src/qa/: artifacts.rs  ast.rs  exec.rs  extract.rs  fmt.rs  graph.rs  mod.rs  model.rs  parse.rs  runner.rs
crates/abide-sema/: Cargo.toml
crates/abide-sema/src/: lib.rs  loader.rs
crates/abide-sema/src/elab/: env.rs  error.rs  types.rs
crates/abide-sema/src/elab/check/: ctors.rs  entity.rs  matches.rs  mod.rs  system.rs
crates/abide-sema/src/elab/collect/: entity.rs  expr.rs  mod.rs  system.rs
crates/abide-sema/src/elab/resolve/: expr.rs  (+4 more)
crates/abide-verify/: Cargo.toml
crates/abide-verify/src/: lib.rs
crates/abide-verify/src/verify/: chc.rs  context.rs  defenv.rs  encode.rs  explicit.rs  fn_verify.rs  harness.rs  ic3.rs  ltl.rs  mod.rs  property.rs  relation_sat.rs  relational.rs  scene.rs  scope.rs  smt.rs  solver.rs  sygus.rs  temporal.rs  temporal_relational.rs  tests.rs  theorem.rs  transition.rs  walkers.rs
crates/abide/src/: artifact.rs  cli.rs  driver.rs  ide.rs  lib.rs  main.rs  render.rs  simulate.rs  workspace.rs
crates/abide/src/repl/: artifacts.rs  complete.rs  mod.rs
crates/abide/tests/: integration.rs  witness_audit.rs
crates/abide/tests/fixtures/: algorithms.ab  assert_assume.ab  auth.ab  billing.ab  call_site.ab  cardinality.ab  collection_comprehensions.ab  collection_ops.ab  collections.ab  command_step_query.ab  commerce.ab  composition.ab  constructor_fields.ab  contracts.ab  deep_dead_state.ab  fairness.ab  functions.ab  hospital.ab  hypo_base.ab  imperative.ab  inventory.ab  lambdas.ab  lemmas.ab  liveness_quantified_false.ab  liveness_reduction.ab  logistics.ab  match_exhaustive.ab  match_non_exhaustive.ab  match_non_exhaustive_alias.ab  match_non_exhaustive_scene.ab  match_test.ab  nested_actions.ab  nondet_defaults.ab  nondet_defaults_invalid.ab  nondet_where_false.ab  one_lone.ab  patterns.ab  proof_failures.ab  quantifiers.ab  recursion_stress.ab  (+15 more)
(+82 files in other folders)
