[package]
name = "abide-ir"
version = "0.1.0"
edition = "2021"

[dependencies]
abide-core = { path = "../abide-core" }
abide-sema = { path = "../abide-sema" }
abide-syntax = { path = "../abide-syntax" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"
