[package]
name = "abide-qa"
version = "0.1.0"
edition = "2021"

[dependencies]
abide-ir = { path = "../abide-ir" }
abide-sema = { path = "../abide-sema" }
abide-syntax = { path = "../abide-syntax" }
abide-verify = { path = "../abide-verify" }
abide-witness = { path = "../abide-witness" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"
