[package]
name = "abide"
version = "0.1.0"
edition = "2021"

[dependencies]
abide-core = { path = "../abide-core" }
abide-ir = { path = "../abide-ir" }
abide-qa = { path = "../abide-qa" }
abide-sema = { path = "../abide-sema" }
abide-syntax = { path = "../abide-syntax" }
abide-verify = { path = "../abide-verify" }
abide-witness = { path = "../abide-witness" }
miette = { version = "7", features = ["fancy"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reedline = "0.38"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
